--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,28 +1,100 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+* {
+    box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #2f2f37;
-  max-width: 960px;
-  padding: 16px;
 }
 
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #ff6b0a;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
+a {
+    text-decoration: none;
 }
 
-.example .background {
-  height: 240px;
-  // ❗️❗️❗️ The path to images from a SASS file
-  // is always the same as from the css folder.
-  background-image: url('../images/logo.png');
-  background-size: cover;
-  background-position: center;
+p {
+    margin: 0;
+}
+
+.search-form {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 25px 0;
+    background: rgba(149, 75, 206, 0.653);
+    background: radial-gradient(circle, rgba(170, 113, 189, 0.795) 0%, rgb(65, 3, 94) 100%);
+    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+.gallery {
+  padding-top: 100px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 25px;
+    width: 1200px;
+}
+
+.gallery,
+.info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: center;
+    align-items: center;
+    width: 100%;
+    margin: calc(-1 * 20px / 2);
+}
+
+.gallery-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.gallery-item__img {
+    display: block;
+    height: 40vh;
+    object-fit: cover;
+}
+
+.info {
+    color: black;
+    padding: 15px;
+}
+
+.info-item {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.load-more {
+    width: 200px;
+    height: 40px;
+
+    margin-top: 50px;
+    margin-bottom: 30px;
+    margin-left: 50%;
+    transform: translateX(-50%);
+
+    font-size: 16px;
+
+    border-radius: 5px;
+  
+
+    cursor: pointer;
+    transition: background-color 300ms linear, color 300ms linear;
+
+    &:hover,
+    &:focus {
+        background-color: rebeccapurple;
+        color: #ffffff;
+      
+    }
+
+    &.is-hidden {
+        display: none;
+    }
 }
